# -C-

./: .clang-tidy  .gitignore  CMakeLists.txt
src/: driver.cpp  driver.hpp  main  main.cpp
src/IR/: IRgen.cpp  IRgen.hpp  IRnodes.cpp  IRnodes.hpp  IRprinter.cpp  IRprinter.hpp  createIRnode.hpp  emit.cpp  emit.hpp
src/codegen/: backend_driver.cpp  backend_driver.hpp  code_emission.cpp  code_emission.hpp  codegen.cpp  codegen.hpp
src/codegen/ASM/: CreateASMnode.hpp  RISC-V.hpp  asm.hpp
src/codegen/expand_pseudo/: expand_pseudo.cpp  expand_pseudo.hpp
src/codegen/reg_alloc/: register_allocator.cpp  register_allocator.hpp
src/diagnostics/: DiagnosticsEngine.cpp  DiagnosticsEngine.hpp
src/lexer/: Token.hpp  lexer.cpp  lexer.hpp
src/parser/: AstPrinter.cpp  AstPrinter.hpp  Expr.cpp  Expr.hpp  Stmt.cpp  Stmt.hpp  parser.cpp  parser.hpp
src/parser/Ast/: CreateASTnode.hpp  Expr.cpp  Expr.hpp  Stmt.cpp  Stmt.hpp
tests/: test_IR.cpp  test_codegen.cpp  test_parser.cpp
